--- a/WarsawCityGame/app/src/main/res/layout/fragment_friends.xml
+++ b/WarsawCityGame/app/src/main/res/layout/fragment_friends.xml
@@ -3,37 +3,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_weight="110">
+    android:layout_weight="110"
+    android:background="@drawable/main_header_selector_blu"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
             android:text="Add a friend"
+            android:fontFamily="sans-serif-light"
+            android:textColor="#FFFFFF"
             android:textAlignment="center"
-            android:textSize="12pt"
+            android:textSize="25sp"
             />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10">
+        android:layout_height="wrap_content"
+        android:id="@+id/searchPlate"
+        >
         <SearchView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/searchView"
+            android:background="#FFFFFF"
+            android:iconifiedByDefault="false"
             />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="30">
+        android:layout_height="wrap_content"
+        >
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,16 +49,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="60"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="10"
-            android:text="All friends"
-            android:textColor="#000000"
-            android:textSize="12pt"/>
+            android:text="Your friends"
+            android:fontFamily="sans-serif-light"
+            android:textColor="#FFFFFF"
+            android:textAlignment="center"
+            android:textSize="25sp"/>
         <ListView
             android:layout_width="match_parent"
             android:layout_height="0dp"
