--- a/WarsawCityGame/app/src/main/res/layout/friend_list_item.xml
+++ b/WarsawCityGame/app/src/main/res/layout/friend_list_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <com.warsawcitygame.CustomControls.MLRoundedImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:src="@drawable/tiger"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -17,6 +17,6 @@
         android:textColor="#000000"
         android:layout_marginLeft="140dp"
         android:layout_centerVertical="true"
-        android:textSize="15pt"
+        android:textSize="16sp"
         />
 </RelativeLayout>
