--- a/WarsawCityGame/app/src/main/res/layout/friend_search_result.xml
+++ b/WarsawCityGame/app/src/main/res/layout/friend_search_result.xml
@@ -8,24 +8,26 @@
         android:src="@drawable/tiger"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="45dp"
         />
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/friendName"
         android:textColor="#000000"
-        android:layout_marginLeft="90dp"
+        android:layout_marginLeft="110dp"
+        android:textAlignment="center"
         android:layout_centerVertical="true"
-        android:textSize="12pt"
+        android:textSize="14sp"
         />
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:text="Dodaj"
         android:textColor="#000000"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
-        android:id="@+id/addFriendButton"/>
+        android:layout_marginRight="50dp"
+        android:id="@+id/addFriendButton"
+        android:fontFamily="sans-serif-light"
+        style="@style/roundedbuttontransparent"/>
 </RelativeLayout>
