--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_loading.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_loading.xml
@@ -2,7 +2,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:weightSum="100">
+    android:weightSum="100"
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp"
+    android:background="#FFFFFF">
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
