--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_password_change.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_password_change.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="12sp"
-        android:text="Sample description"
+        android:text="Enter your password"
         android:textColor="#000000"
         android:layout_marginTop="5dp"
         android:id="@+id/description1"/>
@@ -21,7 +21,6 @@
         android:textSize="20sp"
         android:textAlignment="center"
         android:textColor="#00BFFF"
-        android:text="sample text"
         android:textColorHint="#00BFFF"
         android:inputType="textPassword"/>
     <TextView
@@ -29,8 +28,8 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="12sp"
-        android:text="Sample description"
         android:textColor="#000000"
+        android:text="Enter new password"
         android:layout_marginTop="5dp"
         android:id="@+id/description2"/>
     <EditText
@@ -40,7 +39,6 @@
         android:textSize="20sp"
         android:textAlignment="center"
         android:textColor="#00BFFF"
-        android:text="sample text"
         android:textColorHint="#00BFFF"
         android:inputType="textPassword"/>
     <RelativeLayout
