--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_current_mission.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_current_mission.xml
@@ -39,7 +39,6 @@
         android:textColor="#ffffff"
         android:background="#ff4040"
         android:clickable="true"
-        android:layout_above="@+id/acomplish_mission_button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
@@ -53,20 +52,18 @@
         android:layout_marginTop="20dp"
         android:textColor="#000000"
         android:fontFamily="sans-serif-thin"
-        android:text="@string/missionTxt"
-        android:id="@+id/textMission"
+        android:text=""
+        android:id="@+id/missionDesc"
         android:layout_centerVertical="true"
-        android:layout_below="@+id/textView4"
-        android:layout_above="@+id/map_button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Show map"
+        android:text=""
+        android:id="@+id/map_button"
         android:background="#00BFFF"
-        android:id="@+id/button2"
         android:textColor="#ffffff"
         android:clickable="true"
         android:layout_above="@+id/abort_mission_button"
@@ -82,7 +79,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Missing Keys"
-        android:id="@+id/textView4"
+        android:id="@+id/missionName"
         android:textSize="30dp"
         android:textIsSelectable="true"
         android:textAlignment="center"
@@ -103,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Done!"
-        android:id="@+id/doneButton"
+        android:id="@+id/accomplishMissionButton"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
