--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_current_mission.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_current_mission.xml
@@ -27,7 +27,7 @@
             android:textSize="30sp" />
 
     </LinearLayout>
-   layout_alignParentStart="true">
+
 
     <Button
         android:id="@+id/abort_mission_button"
@@ -39,6 +39,7 @@
         android:textColor="#ffffff"
         android:background="#ff4040"
         android:clickable="true"
+        android:layout_above="@+id/accomplishMissionButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
@@ -61,7 +62,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="Show map"
         android:id="@+id/map_button"
         android:background="#00BFFF"
         android:textColor="#ffffff"
@@ -78,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Missing Keys"
+        android:text=""
         android:id="@+id/missionName"
         android:textSize="30dp"
         android:textIsSelectable="true"
