--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_current_mission.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_current_mission.xml
@@ -50,6 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
+        android:textAlignment="center"
         android:layout_marginTop="20dp"
         android:textColor="#000000"
         android:fontFamily="sans-serif-thin"
