--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/values/styles.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
     <style name="TransparentStretchedDialog" parent="android:Theme.Dialog">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -15,6 +16,7 @@
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:layout_gravity">center</item>
     </style>
+
     <style name="TextViewAppearance.Headline2" parent="@style/TextViewAppearance">
         <item name="typeface">robotoLight</item>
         <item name="android:textSize">24sp</item>
@@ -27,16 +29,19 @@
         <item name="android:background">@xml/roundedbutton</item>
         <item name="android:layout_margin">5dp</item>
     </style>
+
     <style name="roundedbuttonorange">
         <item name="android:layout_gravity">end</item>
         <item name="android:background">@xml/roundedbuttonorange</item>
     </style>
+
     <style name="roundedbuttontransparent">
         <item name="android:layout_width">200dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:background">@xml/roundedbuttontransparent</item>
         <item name="android:layout_margin">5dp</item>
     </style>
+
     <style name="TextViewAppearance" parent="@android:style/TextAppearance.Widget.TextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -55,5 +60,14 @@
         <item name="android:windowMinWidthMajor">100%</item>
     </style>
 
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
 
-    </resources>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+
+
+</resources>
