--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/friend_search_result.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/friend_search_result.xml
@@ -2,13 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.warsawcitygame.CustomControls.MLRoundedImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/tiger"
+        android:src="@drawable/default_image"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="45dp"
+        android:id="@+id/friendPic2"
         />
     <TextView
         android:layout_width="wrap_content"
