--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_current_mission.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_current_mission.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerHorizontal="true"
-    android:layout_centerVertical="true">
+    android:layout_centerVertical="true"
+    android:orientation="vertical">
     <LinearLayout
         android:id="@+id/currMissionTop"
         android:layout_width="match_parent"
@@ -12,40 +13,34 @@
         android:gravity="center_horizontal|center_vertical"
         android:orientation="horizontal"
         android:paddingTop="6dp"
-        android:paddingBottom="6dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:paddingBottom="6dp">
         <TextView
             android:id="@+id/currMissionTopName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:layout_gravity="center_vertical|center_horizontal"
             android:text="Current Mission"
             android:textColor="#ffffff"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="30sp" />
-
     </LinearLayout>
-
-
-    <Button
-        android:id="@+id/abort_mission_button"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Abort mission"
-        android:maxWidth="100dp"
-        android:maxHeight="100dp"
-        android:textColor="#ffffff"
-        android:background="#ff4040"
-        android:clickable="true"
-        android:layout_above="@+id/accomplishMissionButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-
+        android:id="@+id/imageView2"
+        android:src="@drawable/wisla"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text=""
+        android:id="@+id/missionName"
+        android:textSize="30dp"
+        android:textIsSelectable="true"
+        android:textAlignment="center"
+        android:enabled="true"
+        android:textColor="#000000"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -55,60 +50,38 @@
         android:textColor="#000000"
         android:fontFamily="sans-serif-thin"
         android:text=""
-        android:id="@+id/missionDesc"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
+        android:id="@+id/missionDesc"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_gravity="bottom"
+        android:gravity="bottom">
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Show map"
         android:id="@+id/map_button"
         android:background="#00BFFF"
         android:textColor="#ffffff"
         android:clickable="true"
-        android:layout_above="@+id/abort_mission_button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:contextClickable="false" />
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text=""
-        android:id="@+id/missionName"
-        android:textSize="30dp"
-        android:textIsSelectable="true"
-        android:textAlignment="center"
-        android:enabled="true"
-        android:textColor="#000000"
-        android:layout_below="@+id/imageView2"
-        android:layout_centerHorizontal="true" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
-        android:src="@drawable/star_icon"
-        android:layout_below="@+id/currMissionTop"
-        android:layout_centerHorizontal="true" />
-
+        android:contextClickable="false"/>
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/abort_mission_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Abort mission"
+        android:maxWidth="100dp"
+        android:maxHeight="100dp"
+        android:textColor="#ffffff"
+        android:background="#ff4040"
+        android:clickable="true"/>
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Done!"
         android:id="@+id/accomplishMissionButton"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:background="#62ff00"
-        android:textColor="#ffffff" />
-
-</RelativeLayout>
+        android:textColor="#ffffff"/>
+    </LinearLayout>
+</LinearLayout>
