--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_current_mission.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_current_mission.xml
@@ -28,8 +28,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
-        android:src="@drawable/wisla"/>
+        android:id="@+id/imageView2"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
