--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/missions_row_view.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/missions_row_view.xml
@@ -65,7 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
-                    android:text="@string/detailsText"/>
+                    android:text="ACCEPT"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
