--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_mission_history2.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_mission_history2.xml
@@ -1,13 +1,22 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.warsawcitygame.Fragments.MissionHistoryFragment">
+    android:layout_centerHorizontal="true"
+    android:background="@xml/main_header_selector_top"
+    android:orientation="vertical">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent" android:layout_height="match_parent"
+        android:padding="16dp"
+        >
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        <android.support.v7.widget.RecyclerView
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:id="@+id/rv"
+            >
+        </android.support.v7.widget.RecyclerView>
 
-</FrameLayout>
+
+    </LinearLayout>
+</LinearLayout>
