--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_error.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_error.xml
@@ -3,9 +3,9 @@
               android:layout_height="wrap_content"
               android:background="#FFFFFF"
               android:orientation="vertical"
-              android:paddingBottom="20dp"
               android:paddingTop="20dp"
-              android:weightSum="100">
+              android:weightSum="100"
+              android:padding="20dp">
 
     <TextView
         android:id="@+id/error_title"
