--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/missions_row_view.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/missions_row_view.xml
@@ -17,7 +17,7 @@
         <ImageView
             android:id="@+id/mission_photo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             />
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,34 +38,28 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 />
-            <TextView
-                android:id="@+id/mission_exp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000000"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <Button
-                    android:id="@+id/mission_location"
-                    style="@style/roundedbuttontransparent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-light"
-                    android:text="@string/showOnMapText"
-                    android:paddingRight="2dp"
-                    android:paddingLeft="2dp"/>
+            <TextView
+                android:id="@+id/mission_exp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#00BFFF"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="10dp"
+                />
                 <Button
                     android:id="@+id/mission_accept"
                     style="@style/roundedbuttontransparent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
-                    android:text="ACCEPT"/>
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:text="@string/acceptMissionText"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
